--- a/fr/community.org
+++ b/fr/community.org
@@ -16,7 +16,7 @@
   :END:
 
 #+ATTR_HTML: style="float: right;" width="500px"
-[[file:img/list.png]]
+[[file:../img/list.png]]
 
 Inscrivez-vous à la [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][liste de discussion]] (en).
 
@@ -50,7 +50,7 @@ Les utilisateurs discutent aussi sur le canal IRC =#org-mode= de [[http://webcha
   :END:
 
 #+ATTR_HTML: style="float: right;" width="500px"
-[[file:img/worg.png]]
+[[file:../img/worg.png]]
 
 =git://orgmode.org/worg.git=
 
@@ -80,7 +80,7 @@ publique à Bastien.
   :END:
 
 #+ATTR_HTML: style="float: right;" width="500px"
-[[file:img/gsoc2012.png]]
+[[file:../img/gsoc2012.png]]
 
 En 2012, deux étudiants ont fini avec succès un projet [[http://code.google.com/soc/][Google Summer of
 Code]] lié à Org mode.
@@ -138,7 +138,7 @@ l'oeuvre.
   :END:
 
 #+ATTR_HTML: style="float: right;" width="500px"
-[[file:img/gplus.png]]
+[[file:../img/gplus.png]]
 
 /Takaaki Ishikawa/ maintient [[https://twitter.com/#!/orgmode_bot][@orgmode\_bot]] sur Twitter et vous pouvez
 généralement consulter [[https://twitter.com/#!/search/%2523orgmode][#orgmode]].
@@ -186,7 +186,7 @@ célèbre t-shirt Org.  Vous pouvez l'acheter depuis [[http://orgmode.spreadshir
 [[http://orgmode.spreadshirt.com/][États-Unis]].
 
 #+ATTR_HTML: style="float: center;" width="300px"
-[[file:img/shirts.jpg]]
+[[file:../img/shirts.jpg]]
 
 ** Move
    :PROPERTIES:
