--- a/fr/index.org
+++ b/fr/index.org
@@ -26,11 +26,11 @@ Guerry</a> depuis 2011.</span></em></p></div>
   :END:
 
 #+ATTR_HTML: style="float: right;" width="500px"
-[[file:img/main.jpg]]
+[[file:../img/main.jpg]]
 
 Version stable *7.9.1* (sept. 2012) --- [[http://orgmode.org/org-7.9.1.tar.gz][tar.gz]] ou [[http://orgmode.org/org-7.9.1.zip][zip]]
 
-Voir les [[file:~/install/git/orgweb/Changes.org][derniers changements]] (en).
+Voir les [[file:../Changes.org][derniers changements]] (en).
 
 Version de développement ([[http://orgmode.org/w/org-mode.git][gitweb]]):
 
@@ -43,7 +43,7 @@ Dernière version du jour : [[http://orgmode.org/org-latest.tar.gz][tar.gz]] ou 
 - [[file:features.org][Liste des fonctionnalités]]
 - [[#docs][Manuels et tutoriels]]
 - [[file:talks.org][Présentations vidéo sur Org mode]]
-- [[http://orgmode.org/community.html#gsoc][Google Summer of Code 2012]]
+- [[http://orgmode.org/fr/community.html#gsoc][Google Summer of Code 2012]]
 - [[file:community.org][Liste de discussion et « goodies »]]
 
 ** More
@@ -66,7 +66,7 @@ Plus sur [[http://orgmode.org/worg/dev/org-build-system.html][l'installation d'O
   :END:
 
 #+ATTR_HTML: style="float: right;" width="300px"
-[[file:img/org-mode-7-network-theory.jpg]]
+[[file:../img/org-mode-7-network-theory.jpg]]
 
 Acheter la [[http://www.network-theory.co.uk/org/manual/][version papier]] du manuel d'Org ([[http://www.network-theory.co.uk/][Network Theory Ltd]].)
 
