--- a/ja/index.org
+++ b/ja/index.org
@@ -7,7 +7,7 @@
 #+DESCRIPTION: Org: ノート、計画、編集のための Emacs モード
 #+MACRO: next #+BEGIN_HTML\n<div class="move">\n> <a onclick="goToByScroll('$1');return false;" href="#">documentation</a>\n</div>\n#+END_HTML
 #+MACRO: previous #+BEGIN_HTML\n<div class="move">\n< <a onclick="goToByScroll('$1');return false;" href="#">download and install</a>\n</div>\n#+END_HTML
-#+STYLE:     <link rel="stylesheet" href="org.css" type="text/css" />
+#+STYLE:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 
 #+BEGIN_HTML
 <div style="margin-top:0pt;"><p><em>Org mode is for keeping notes, maintaining TODO lists, doing project
