--- a/fr/index.org
+++ b/fr/index.org
@@ -12,7 +12,7 @@
 #+BEGIN_HTML
 <div style="margin-top:0pt;"><p><em>Org mode permet de prendre des notes,
 de maintenir des listes TODO, de planifier des projets et de publier des
-documents, le tout à partir de texte brut.<br />
+documents, le tout en texte brut.<br />
 
 <span style="font-size:70%;">Ce logiciel est développé par <a
 href="http://staff.science.uva.nl/~dominik/">Carsten Dominik</a> depuis
