--- a/features.org
+++ b/features.org
@@ -16,7 +16,7 @@ planning, and authoring with a fast and effective plain-text system./
   :ID: editing
   :END:
 
-#+ATTR_HTML: style="float: right;" width="500px"
+#+ATTR_HTML: id="main-image"
 [[file:img/structure.jpg]]
 
 Org is built on top of =outline.el=.
@@ -44,7 +44,7 @@ More on [[http://orgmode.org/manual/Document-Structure.html#Document-Structure][
   :ID: planning
   :END:
 
-#+ATTR_HTML: style="float: right;" width="500px"
+#+ATTR_HTML: id="main-image"
 [[file:img/planning.jpg]]
 
 Org can be used as a TODO lists manager and as a planner.
@@ -76,7 +76,7 @@ Handling [[http://orgmode.org/manual/Dates-and-Times.html#Dates-and-Times][dates
   :ID: clocking
   :END:
 
-#+ATTR_HTML: style="float: right;" width="500px"
+#+ATTR_HTML: id="main-image"
 [[file:img/clocking.jpg]]
 
 Clocking in a task is =C-c C-x C-i=.
@@ -107,7 +107,7 @@ More on [[http://orgmode.org/manual/Clocking-work-time.html#Clocking-work-time][
   :ID: agendas
   :END:
 
-#+ATTR_HTML: style="float: right;" width="500px"
+#+ATTR_HTML: id="main-image"
 [[file:img/agenda.jpg]]
 
 Even with large =.org= files and thousands of tasks, it is easy to focus on
@@ -142,7 +142,7 @@ Tutorial on [[http://orgmode.org/worg/org-tutorials/org-custom-agenda-commands.h
   :ID: capturing
   :END:
 
-#+ATTR_HTML: style="float: right;" width="500px"
+#+ATTR_HTML: id="main-image"
 [[file:img/capture.jpg]]
 
 Adding TODO items to your =.org= files is called /capturing/.
@@ -170,7 +170,7 @@ More on [[http://orgmode.org/manual/Capture.html#Capture][capturing]] (manual)
   :ID: tables
   :END:
 
-#+ATTR_HTML: style="float: right;" width="500px"
+#+ATTR_HTML: id="main-image"
 [[file:img/table2.jpg]]
 
 Org is a great plain-text table editor.
@@ -206,7 +206,7 @@ Using [[http://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html][Org as
   :ID: exporting
   :END:
 
-#+ATTR_HTML: style="float: right;" width="500px"
+#+ATTR_HTML: id="main-image"
 [[file:img/export.jpg]]
 
 Org is an authoring and publication tool.
@@ -245,7 +245,7 @@ More on [[http://orgmode.org/manual/Publishing.html#Publishing][publishing]] (ma
   :ID: babel
   :END:
 
-#+ATTR_HTML: style="float: right;" width="500px"
+#+ATTR_HTML: id="main-image"
 [[file:img/babel.jpg]]
 
 Org makes [[http://en.wikipedia.org/wiki/Literate_programming][literate programming]] a handy and natural way to deal with code.
