--- a/fr/index.org
+++ b/fr/index.org
@@ -10,11 +10,11 @@
 #+STYLE:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 
 #+BEGIN_HTML
-<div style="margin-top:0pt;"><p><em>Org mode permet de prendre des notes,
+<div id="top"><p><em>Org mode permet de prendre des notes,
 de maintenir des listes TODO, de planifier des projets et de publier des
 documents, le tout en texte brut.<br />
 
-<span style="font-size:70%;">Ce logiciel est développé par <a
+<span id="top2">Ce logiciel est développé par <a
 href="http://staff.science.uva.nl/~dominik/">Carsten Dominik</a> depuis
 2003 et maintenu par <a href="http://lumiere.ens.fr/~guerry/">Bastien
 Guerry</a> depuis 2011.</span></em></p></div>
