--- a/fr/index.org
+++ b/fr/index.org
@@ -32,11 +32,11 @@ Version stable *7.9.1* (sept. 2012) --- [[http://orgmode.org/org-7.9.1.tar.gz][t
 
 Voir les [[file:../Changes.org][derniers changements]] (en).
 
-Version de développement ([[http://orgmode.org/w/org-mode.git][gitweb]]):
+Version de développement ([[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]):
 
 =git://orgmode.org/org-mode.git=
 
-=M-x list-packages RET=
+=M-x list-packages RET=  (voir [[http://orgmode.org/elpa/][Org ELPA]])
 
 Dernière version du jour : [[http://orgmode.org/org-latest.tar.gz][tar.gz]] ou [[http://orgmode.org/org-latest.zip][zip]]
 
