--- a/community.org
+++ b/community.org
@@ -10,7 +10,7 @@
 
 #+BEGIN_HTML
 <div id="top"><p><em>Org mode is for keeping notes, maintaining TODO lists, doing project
-planning, and authoring with a fast and effective plain-text system.</div>
+planning, and authoring with a fast and effective plain-text system.</em></p></div>
 #+END_HTML
 
 * Mailing list and IRC channel
