--- a/fr/index.org
+++ b/fr/index.org
@@ -36,7 +36,7 @@ Version de développement ([[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]):
 
 =git://orgmode.org/org-mode.git=
 
-=M-x list-packages RET=  (voir [[http://orgmode.org/elpa/][Org ELPA]])
+=M-x list-packages RET=  (voir [[http://orgmode.org/elpa.html][Org ELPA]])
 
 Dernière version du jour : [[http://orgmode.org/org-latest.tar.gz][tar.gz]] ou [[http://orgmode.org/org-latest.zip][zip]]
 
