--- a/index.org
+++ b/index.org
@@ -33,7 +33,7 @@ Development version ([[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]):
 
 =git://orgmode.org/org-mode.git=
 
-=M-x list-packages RET= (see [[http://orgmode.org/elpa/][Org ELPA]])
+=M-x list-packages RET= (see [[http://orgmode.org/elpa.html][Org ELPA]])
 
 Daily snapshots: [[http://orgmode.org/org-latest.tar.gz][tar.gz]] or [[http://orgmode.org/org-latest.zip][zip]]
 
