--- a/ja/index.org
+++ b/ja/index.org
@@ -35,7 +35,7 @@ is maintained by <a href="http://lumiere.ens.fr/~guerry/">Bastien Guerry</a> sin
 
 =git://orgmode.org/org-mode.git=
 
-=M-x list-packages RET= (see [[http://orgmode.org/elpa/][Org ELPA]])
+=M-x list-packages RET= (see [[http://orgmode.org/elpa.html][Org ELPA]])
 
 ナイトリー版：[[http://orgmode.org/org-latest.tar.gz][tar.gz]]／[[http://orgmode.org/org-latest.zip][zip]]
 
